--- a/styles.css
+++ b/styles.css
@@ -87,8 +87,9 @@ input {
   
 }
 input[type="submit"].btn:hover {
-    border: 1px solid black;
-    background-color: var(-Tomato)
+    border: 1px solid var(--Tomato);
+    background-color: var(--Tomato);
+    box-shadow: 0px 0px 30px var(--Tomato);
 }
 
 /* #signup_submit {
