--- a/styles.css
+++ b/styles.css
@@ -156,8 +156,21 @@ input[type="submit"].btn:hover {
         flex-direction: column;
     }
     
-    
-    
+    .container_signup {
+        width: 100%;
+        height: 70%;
+        margin: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+    }
+    .container_background {
+        height: 30%;
+        
+    }
+
+    .container_signup_check{}
 }
 
 
