--- a/styles.css
+++ b/styles.css
@@ -30,10 +30,10 @@ main {
 
 }
 .container{
-  width: 1000px;
+  width: 950px;
   height: 600px;
   background-color: var(--White);
-  border-radius: 5%;
+  border-radius: 40px;
   display: flex;
   flex-direction: row;
   margin: 10px;
@@ -42,7 +42,7 @@ main {
 }
 
 
-/**/
+/*Info and submit form*/
 .container_signup {
   width: 50%;
   margin: 80px 70px 80px 60px;
@@ -54,18 +54,14 @@ main {
 
 h1 {
     font-weight: 700;
-    font-size: 4rem;
+    font-size: 3.5rem;
 }
 
 ul {
-    list-style-image: url("assets/images/icon-list.svg");
+    list-style: url("assets/images/icon-list.svg") outside; 
     margin: 0 30px 0 30px;
 }
 
-li {
-    margin-top: 10px;
-}
-/**/
 
 .signup_form {
   display: flex;
@@ -74,11 +70,37 @@ li {
   
 }
 
+.label_error {
+  display: flex;
+  flex-direction:row;
+  justify-content: space-between;
+  align-items: flex-end;
+  font-weight: 700;
+  margin-bottom: -15px;
+  font-size: 0.8rem; 
+}
+
+.label_error p {
+
+  color: var(--Tomato);
+
+}
+
 input {
     width: 100%;
     height: 50px;
     margin-top: 20px;
+    border-radius: 15px;
+    font-size: 1rem;
 
+}
+
+label {
+  font-weight: 700;
+}
+
+#email {
+  border-color: var(--Grey);
 }
 
 .btn {
@@ -87,9 +109,9 @@ input {
   background-color: var(--DarkSlate-Grey);
   color: var(--White);
 
-
-
 }
+
+/* Hover modified */
 input[type="submit"].btn:hover {
   border: 1px solid var(--Tomato);
   background-color: var(--Tomato);
@@ -99,25 +121,7 @@ input[type="submit"].btn:hover {
   cursor: pointer;;
 }
 
-.label_error {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  font-weight: 700;
-
-}
-
-.label_error p {
-
-  color: var(--Tomato);
-
-}
-
-/* #signup_submit {
-  width: fit-content;
-} */
-
-/**/
+/*IMG*/
 .container_background {
   width: 50%;
   margin: 20px;
@@ -145,39 +149,89 @@ input[type="submit"].btn:hover {
   transform: scale(0.7);
 }
 
-/**/
+/*Media mobil size*/
 
 @media (max-width: 375px) {
     .container{
         width: 100%;
-        height: 100vh;
+        height: 812px;
         margin: 0;
         display: flex;
-        flex-direction: column;
+        flex-direction:column-reverse;
+        border-radius: 0;
     }
     
     .container_signup {
-        width: 100%;
-        height: 70%;
-        margin: 10px;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+      width: 100%;
+      height: 70%;
+      margin: 20px;
+      margin-top: 40px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
 
     }
+
+    .container_signup h1 {
+      font-size: 2.6rem;
+    }
+
+    .container_signup p {
+      margin-bottom: -1rem;
+    }
+    ul {
+      font-size: 1.1rem;
+      margin: 5px;
+    }
+
+    ul li {
+      padding-left: 2.7rem;
+      list-style: none;
+      margin-top: 10px;
+      padding-bottom: 1rem;
+      background-image: url("assets/images/icon-list.svg") ;
+      background-position: 0 0;
+      background-size: 1rem 1rem;
+      background-repeat: no-repeat;
+  
+
+    }
+
     .container_background {
         height: 30%;
-        
+        width:  100%;
+        margin: 0;
+        border-radius: 0px 0px 10px 10px;
     }
 
-    .container_signup_check{}
+    .container_signup_check {
+      display: none;
+      width: 100%;
+      height: 100%;
+      margin: 20px;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    
+    .container_signup_check h1 {
+      font-size: 2.5rem;
+    }
+    .container_signup_check p {
+      font-size: 1rem;
+      
+    }
+    
+    .container_signup_check svg {
+      transform: scale(0.9);
+    }
+    
 }
 
 
 
 /* - Desktop: 1440px x 900*/
 
-/* - Mobile: 375px */
+/* - Mobile: 375px x 812 Iphone 11*/
 
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
